@@ -31,7 +31,7 @@ public interface EntityMover {
 	/**
 	 * @param c the coord to kill all (killable) entities on
 	 */
-	public void kill(Coord c);
+	public boolean kill(Coord c);
 
 
 }
