@@ -72,13 +72,14 @@ public class GameController {
 			e.printStackTrace();
 		}
 
-		l.enableWinCondition(WinType.EXIT);
-		l.enableWinCondition(WinType.ENEMY);
-		l.enableWinCondition(WinType.SWITCH);
-		l.enableWinCondition(WinType.TREASURE);
+		// REFACTOR so that entity contains win condition
+		// l.enableWinCondition(WinType.EXIT);
+		// l.enableWinCondition(WinType.ENEMY);
+		// l.enableWinCondition(WinType.SWITCH);
+		// l.enableWinCondition(WinType.TREASURE);
 		l.addItem(new SwordUsableEntity(new Coord(4, 4)), new Coord(4, 4));
 		l.addItem(new BombUsableEntity(new Coord(1, 5)), new Coord(1, 5));
-		l.addEnemy(new BoulderMobileEntity(new Coord(2, 3)), new Coord(2, 3));
+		//l.addEnemy(new BoulderMobileEntity(new Coord(2, 3)), new Coord(2, 3));
 		l.placeSwitch(new Coord(3, 3));
 		l.addItem(new TreasureEntity( new Coord(5,6)), new Coord(5,6));
 		l.addItem(new TreasureEntity(new Coord(10, 2)), new Coord(10, 2));
@@ -87,7 +88,7 @@ public class GameController {
 		l.addItem(new HoverPotion(new Coord(3, 4)), new Coord(3, 4));
 		l.addItem(new InvincibilityEntity(new Coord(1,7)), new Coord(1,7));
 		l.placePit(new Coord(9,9));
-		l.addEnemy(new EnemyMobileEntity(new Coord(15, 15),l), new Coord(15, 15));
+		l.addEnemy(new EnemyMobileEntity(new Coord(15, 15)), new Coord(15, 15));
 		l.addItem(new KeyUsableEntity(null), new Coord(2,5));
 		l.addItem(new KeyUsableEntity(null), new Coord(7,8));
 		l.addItem(new ArrowUsableEntity(null), new Coord(5,8));
