@@ -10,9 +10,16 @@ public class TreasureEntity extends UsableEntity {
 	public Boolean use(Direction playerDirection) {
 		return true;
 	}
+
+	@Override
+	public void applyToPlayer(PlayerMobileEntity player) {
+		this.winCondition.setType(WinType.WIN);
+	}
+
 	
 	@Override
 	public String getSprite() {
 		return "$";
 	}
+
 }
